# webmirror

./: README.md  app.py  forms.py  models.py  pyproject.toml  replit.nix  web_cloner.py
attached_assets/: Pasted-Criar-um-clonador-de-p-ginas-web-usando-Python-com-ferramentas-como-Selenium-para-automa-o-Beauti-1742736997932.txt  content-1742743409335.md
cloned_sites/aurix.framer.media/: index.html
cloned_sites/aurix.framer.media/sites/3a8xfGMAP85d127ivBanD0/: K3hB1CoH-V4vjQV_Ztcg2lbtxaP45A-PUALPzYn3yjo.RUMRYQYO.mjs  chunk-4EQJP75H.mjs  chunk-ALL4FGZN.mjs  chunk-BHPP2DUS.mjs  chunk-DFJ22VYU.mjs  chunk-F4AGK4QS.mjs  chunk-F4GQNRTQ.mjs  chunk-F4HMJHB4.mjs  chunk-H4D334IP.mjs  chunk-HEQGOWWS.mjs  chunk-J3KIX7SF.mjs  chunk-NJBSWFOX.mjs  chunk-OUIXRLPN.mjs  chunk-PC5AZONK.mjs  chunk-QFKB4GRG.mjs  chunk-SWQ2I2R7.mjs  chunk-UH4HVBV6.mjs  chunk-UWUSAHAP.mjs  script_main.P6YJJLM6.mjs
cloned_sites/marso.framer.website/: index.html
cloned_sites/marso.framer.website/sites/CshmQb19Z1VikOP3MxpMD/: RuIotagAKiTXTyw9VTkORDHzv23qrcYU9eHhNTOD19o.QTZB3NVK.mjs  chunk-BV5WBKEZ.mjs  chunk-MJKAZCWI.mjs  chunk-NTCYIFTX.mjs  (+2 more)
cloned_sites/www.framer.com/: gtm.js
cloned_sites/www.framer.com_1/: gtm.js  index.html
cloned_sites/www.framer.com_2/: gtm.js
cloned_sites/www.framer.com_3/: gtm.js
cloned_sites/www.framer.com_4/: gtm.js
static/css/: style.css
static/js/: main.js  script.js
templates/: dashboard.html  index.html  landing.html  layout.html  login.html  preview.html  profile.html  register.html  site_builder.html  user_sites.html
utils/: scraper.py  supabase_client.py
(+48 files in other folders)
