[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "flask-sqlalchemy>=3.1.1",
    "flask>=3.1.0",
    "gunicorn>=23.0.0",
    "requests>=2.32.3",
    "selenium>=4.30.0",
    "trafilatura>=2.0.0",
    "webdriver-manager>=4.0.2",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.2.0",
    "flask-login>=0.6.3",
    "werkzeug>=3.1.3",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
]
